# install-fnalibs

./: .gitignore  README.md  fnalibs.targets  install_fnalibs.py
.github/workflows/: test.yml
fnalibs/: CMakeLists.txt
