cmake_minimum_required(VERSION 3.10)
set(FNALIBS SDL2 FAudio FNA3D)
foreach(LIB ${FNALIBS})
    if(IS_DIRECTORY ${LIB})
        add_subdirectory(${LIB})
        if(${LIB} STREQUAL "SDL2")
            set(SDL2_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/SDL2/include")
            set(SDL2_LIBRARIES SDL2::SDL2)
        endif()
    endif()
endforeach()
set(FNALIBS_TARGET_DIRECTORY "The directory to copy binaries into" CACHE PATH ".")
if(WIN32)
    foreach(LIB ${FNALIBS})
        list(APPEND OUTPUT_FILES "$<TARGET_FILE:${LIB}>")
    endforeach()
    add_custom_target(COPY_BINARIES ALL
        COMMAND ${CMAKE_COMMAND} -E copy_if_different ${OUTPUT_FILES} ${FNALIBS_TARGET_DIRECTORY}
        DEPENDS ${FNALIBS})
endif()